--- a/etc/development.ini
+++ b/etc/development.ini
@@ -11,7 +11,7 @@ pyramid_force_https.structlog = false
 # We do not want force_https and heroku.client_addr from production.ini
 pyramid.includes = ""
 
-sqlalchemy.url = postgresql+psycopg2://getoffmylawn@localhost/getoffmylawn
+sqlalchemy.url = postgresql+psycopg2://localhost/getoffmylawn
 
 # secrets
 jwt.secret = secret
