--- a/etc/production.ini
+++ b/etc/production.ini
@@ -20,6 +20,9 @@ sqlalchemy.url = ${DATABASE_URL}
 # secrets
 jwt.secret = ${JWT_SECRET}
 
+github.consumer_key = ${GITHUB_CLIENT_ID}
+github.consumer_secret = ${GITHUB_CLIENT_SECRET}
+
 ###
 # wsgi server configuration
 ###
